// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`E2eMessageSharedIcon renders correctly for a known user 1`] = `
<div>
  <div
    aria-label="State of the end-to-end encryption"
    aria-labelledby="_r_0_"
    class="mx_EventTile_e2eIcon"
    data-testid="e2e-padlock"
  >
    <svg
      color="var(--cpd-color-icon-tertiary)"
      fill="currentColor"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M11.288 7.288A.97.97 0 0 1 12 7q.424 0 .713.287Q13 7.576 13 8t-.287.713A.97.97 0 0 1 12 9a.97.97 0 0 1-.713-.287A.97.97 0 0 1 11 8q0-.424.287-.713m.001 4.001A.97.97 0 0 1 12 11q.424 0 .713.287.287.288.287.713v4q0 .424-.287.712A.97.97 0 0 1 12 17a.97.97 0 0 1-.713-.288A.97.97 0 0 1 11 16v-4q0-.424.287-.713"
      />
      <path
        clip-rule="evenodd"
        d="M22 12c0 5.523-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2s10 4.477 10 10m-2 0a8 8 0 1 1-16 0 8 8 0 0 1 16 0"
        fill-rule="evenodd"
      />
    </svg>
  </div>
</div>
`;

exports[`E2eMessageSharedIcon renders correctly for an unknown user 1`] = `
<div>
  <div
    aria-label="State of the end-to-end encryption"
    aria-labelledby="_r_6_"
    class="mx_EventTile_e2eIcon"
    data-testid="e2e-padlock"
  >
    <svg
      color="var(--cpd-color-icon-tertiary)"
      fill="currentColor"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M11.288 7.288A.97.97 0 0 1 12 7q.424 0 .713.287Q13 7.576 13 8t-.287.713A.97.97 0 0 1 12 9a.97.97 0 0 1-.713-.287A.97.97 0 0 1 11 8q0-.424.287-.713m.001 4.001A.97.97 0 0 1 12 11q.424 0 .713.287.287.288.287.713v4q0 .424-.287.712A.97.97 0 0 1 12 17a.97.97 0 0 1-.713-.288A.97.97 0 0 1 11 16v-4q0-.424.287-.713"
      />
      <path
        clip-rule="evenodd"
        d="M22 12c0 5.523-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2s10 4.477 10 10m-2 0a8 8 0 1 1-16 0 8 8 0 0 1 16 0"
        fill-rule="evenodd"
      />
    </svg>
  </div>
</div>
`;
